--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mgvdev/eventbridgeschema-to-typescript",
-  "version": "1.1.3",
+  "version": "1.2.1",
   "description": "CLI tool to generate typescript interface from aws eventbridge schemas",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -16,8 +16,8 @@
     "start": "node ./dist/index.js",
     "lint": "eslint src/ --fix",
     "prettier": "prettier -c --write '**/*'",
-    "test": "jest --config jest.config.json --no-cache",
-    "test:watch": "jest --config jest.config.json --no-cache --watch",
+    "test": "jest --config jest.config.ts --no-cache",
+    "test:watch": "jest --config jest.config.ts --no-cache --watch",
     "prepare": "npm run build && npm run lint && npm run prettier && npm run test"
   },
   "husky": {
@@ -44,9 +44,10 @@
   "license": "MIT",
   "devDependencies": {
     "@types/figlet": "^1.5.4",
-    "@types/jest": "^27.0.3",
+    "@types/jest": "^29.4.0",
     "@types/node": "^16.11.13",
     "@types/yargs": "^17.0.7",
+    "@jest/globals": "^29.4.1",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "aws-sdk-client-mock": "^2.0.1",
@@ -59,13 +60,14 @@
     "eslint-plugin-markdown": "^2.2.1",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
-    "jest": "^27.4.5",
+    "jest": "^29.4.1",
     "prettier": "^2.5.1",
-    "ts-jest": "^27.1.1",
-    "typescript": "^4.5.4"
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.5.4",
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
-    "@aws-sdk/client-schemas": "^3.262.0",
+    "@aws-sdk/client-schemas": "3.188.0",
     "chalk": "^4.1.2",
     "json-schema-to-typescript": "^11.0.3",
     "yargs": "^17.3.0"
